@@ -5,6 +5,7 @@ procps-ng NEXT
   * pgrep: Pass int to signalled process                   merge #32
   * pgrep: Check sanity of SG_ARG_MAX                      issue #152
   * pgrep: Add older than selection                        merge #79
+  * pidof: Quiet mode                                      merge #83
   * pidof: show worker threads                             Redhat #1803640
   * ps.1: Mention stime alias                              issue #164
   * ps: check also match on truncated 16 char comm names
